--- a/src/common/Sidebar/styles.module.scss
+++ b/src/common/Sidebar/styles.module.scss
@@ -1,6 +1,7 @@
 .sidebar{
     height: 100vh;
     width: 60px;
+    position: relative;
 
     transition: .3s;
     z-index: 2;
@@ -78,6 +79,20 @@
         }
     }
 
+    .bg{
+        height: 100vh;
+        width: 60px;
+
+        position: fixed;
+        top: 0;
+        left: 0;
+
+        background: #222d32;
+
+        z-index: -1;
+        transition: .3s;
+    }
+
     //active state
     &.active{
         width: 300px;
@@ -104,5 +119,9 @@
             border-left: 2px solid #3c8dbc;
             background: darken(#222d32, 5%);
         }
+    }
+
+    &.active .bg{
+        width: 300px;
     }
 }
