--- a/src/common/Sidebar/styles.module.scss
+++ b/src/common/Sidebar/styles.module.scss
@@ -34,6 +34,10 @@
 
             margin-right: 1rem;
         }
+
+        & > div{
+            display: none;
+        }
     }
 
     .header{
@@ -104,6 +108,10 @@
         & > img{
             max-width: 50px;
             max-height: 50px;
+        }
+
+        & > div{
+            display: block;
         }
     }
 
