--- a/src/index.scss
+++ b/src/index.scss
@@ -20,6 +20,17 @@ body{
     width: 100%;
 }
 
+.loader{
+    filter: hue-rotate(200deg);
+
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .wrapper{
     width: 100%;
 
