--- a/src/common/Sidebar/styles.module.scss
+++ b/src/common/Sidebar/styles.module.scss
@@ -10,6 +10,10 @@ $transitionDur: .3s;
 
     background: #222d32;
 
+    @media all and(max-width: 700px){
+        margin-top: 60px;
+    }
+
     .logo{
         width: 100%;
         height: 60px;
