Departments all page ui ready

--- a/src/index.scss
+++ b/src/index.scss
@@ -83,3 +83,7 @@ tbody th{
     scrollbar-color: rgba(212,214,219,.5) transparent;
     scrollbar-width: thin;
 }
+
+.form-group{
+    margin-bottom: 0!important;
+}
