--- a/src/index.scss
+++ b/src/index.scss
@@ -9,6 +9,10 @@
 body{
     background: #eee;
     overflow-x: hidden;
+
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
 }
 
 .bg-blue{
@@ -20,15 +24,9 @@ body{
     width: 100%;
 }
 
-.loader{
-    filter: hue-rotate(200deg);
-
+#root{
     width: 100%;
     height: 100%;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .wrapper{
@@ -37,6 +35,10 @@ body{
     position: absolute;
     left: 50px;
     top: 60px;
+}
+
+.table-wrapper{
+    overflow-x: scroll;
 }
 
 tbody th{
@@ -82,8 +84,4 @@ tbody th{
 *{
     scrollbar-color: rgba(212,214,219,.5) transparent;
     scrollbar-width: thin;
-}
-
-.form-group{
-    margin-bottom: 0!important;
 }
