--- a/src/index.scss
+++ b/src/index.scss
@@ -58,6 +58,23 @@ tbody th{
     font-family: monospace;
 }
 
+.model__filter-form{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    padding: 0 1rem;
+    margin-bottom: 1rem;
+
+    @media all and(max-width: 600px)  {
+        flex-direction: column;
+
+        & form{
+            margin-top: 1rem;
+        }
+    }
+}
+
 ::-webkit-scrollbar{
     width: 20px;
     height: 20px;
