Constants are ready

--- a/src/index.scss
+++ b/src/index.scss
@@ -102,3 +102,23 @@ tbody th{
     scrollbar-color: rgba(212,214,219,.5) transparent;
     scrollbar-width: thin;
 }
+
+.fade{
+    &-enter{
+        opacity: 0;
+
+        &-active{
+            opacity: 1;
+            transition: opacity 300ms;
+        }
+    }
+
+    &-exit{
+        opacity: 1;
+
+        &-active{
+            opacity: 0;
+            transition: opacity 300ms;
+        }
+    }
+}
